# cliMusic

./: .agent_memory.json  .gitignore  AI_SUGGESTION.md  BUILD_CURRENT_STATUS.md  CLAUDE.md  DESIGN copy 2.md  DESIGN copy.md  DESIGN.md  DSD_to_PCM_Research.md  PLAN.md  PLAN_memory_optimization.md  QUICK_BUILD.md  TASK.md  音乐播放系统设计分析报告.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
md_backup/: BUILD_REPORT.md  BUILD_STATUS.md  BUILD_WINDOWS.md  CHANGELOG.md  FIXES_NEEDED.md  PLAN_memory_optimization.md  PLAN_streaming_resample.md  RELEASE_NOTES.md  RELEASE_VALIDATION.md  TASK_COMPLETION_REPORT.md  TEST_SUMMARY.md  XPU_PHASE1_COMPLETE.md  XPU_PHASE1_IMPLEMENTATION_PROGRESS.md  XPU_PHASE1_IMPLEMENTATION_STATUS.md  XPU_PHASE1_SUMMARY.md  XPU_UNIT_TESTS_SUMMARY.md  build_windows.bat  ffmpeg_dsd_analysis.md  test_struct_size.cpp
specs/001-xpu-mvp-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-xpu-mvp-system/checklists/: requirements.md
specs/001-xpu-mvp-system/contracts/: cli-protocol.md  mcp-tools.yaml  rest-api.yaml
xpu/: .clang-format  .clang-tidy  .cppcheck  .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.minimal.txt  CMakeLists.original.txt  CMakeLists.txt  QUICKSTART.md  README.md  requirements.txt  test_clean_build.ps1
xpu/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  xpu.slnx
xpu/build2/src/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  xpu.vcxproj  xpu.vcxproj.filters
xpu/build2/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  run_comprehensive_tests.vcxproj  run_comprehensive_tests.vcxproj.filters  test_all.vcxproj  test_all.vcxproj.filters  test_benchmark.vcxproj  test_benchmark.vcxproj.filters  test_contract.vcxproj  test_contract.vcxproj.filters  test_crossplatform.vcxproj  test_crossplatform.vcxproj.filters  test_error.vcxproj  test_error.vcxproj.filters  test_integration.vcxproj  test_integration.vcxproj.filters  test_performance.vcxproj  test_performance.vcxproj.filters  test_units.vcxproj  test_units.vcxproj.filters
xpu/build2/tests/benchmark/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
xpu/build2/tests/contract/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
xpu/build2/tests/crossplatform/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
xpu/build2/tests/error/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
xpu/build2/tests/integration/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
xpu/build2/tests/performance/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
xpu/build2/tests/unit/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  test_AudioWrappers.vcxproj  test_AudioWrappers.vcxproj.filters  test_Protocol.vcxproj  test_Protocol.vcxproj.filters
xpu/configs/: xpuSetting.conf
xpu/scripts/: install.ps1  install.sh
xpu/src/lib/: CMakeLists.txt
xpu/src/lib/audio/: AudioFormat.cpp  AudioFormat.h  AudioMetadata.cpp  AudioMetadata.h  AudioProperties.cpp  AudioProperties.h
xpu/src/lib/interfaces/: FeatureStatus.h  IAdvancedDSP.cpp  IAdvancedDSP.h  IAudioClassifier.cpp  IAudioClassifier.h  IAudioFingerprint.cpp  IAudioFingerprint.h  IAudioStreamer.cpp  IAudioStreamer.h  IAudioVisualizer.cpp  IAudioVisualizer.h  IDistributedCache.cpp  IDistributedCache.h  IMetadataProvider.cpp  IMetadataProvider.h  INetworkAudio.cpp  INetworkAudio.h
xpu/src/lib/protocol/: ErrorCode.cpp  ErrorCode.h  ErrorResponse.cpp  ErrorResponse.h  Protocol.h
xpu/src/lib/utils/: ConfigLoader.cpp  ConfigLoader.h  ConfigValidator.cpp  ConfigValidator.h  Logger.cpp  Logger.h  PlatformUtils.cpp  PlatformUtils.h
xpu/src/xpuApi/: APIServer.cpp  APIServer.h  CMakeLists.txt  README.md  xpuApi.cpp
xpu/src/xpuDaemon/: CMakeLists.txt  ConfigWatcher.cpp  ConfigWatcher.h  DaemonController.cpp  DaemonController.h  MCPServer.cpp  MCPServer.h  OrchestrationManager.cpp  OrchestrationManager.h  ProcessManager.cpp  ProcessManager.h  StatePersistence.cpp  StatePersistence.h  stubs.cpp  xpuDaemon.cpp
xpu/src/xpuIn2Wav/: CLIInterface.cpp  CMakeLists.txt  CacheManager.cpp  CacheManager.h  FFTEngine.cpp  FFTEngine.h  FFTEngine_fixed.cpp  FormatConverter.cpp  FormatConverter.h  MathConstants.h  fix_file.ps1  xpuIn2Wav.cpp
xpu/src/xpuLoad/: AudioFileLoader.cpp  AudioFileLoader.h  CLIInterface.cpp  CMakeLists.txt  DSDDecoder.cpp  DSDDecoder.h  MetadataExtractor.cpp  SACDDecoder.cpp  SACDDecoder.h  foobar2000_wrapper.h  xpuLoad.cpp
xpu/src/xpuPlay/: AudioBackend.cpp  AudioBackend.h  AudioBackendFactory.cpp  AudioBackend_ALSA.cpp  AudioBackend_CoreAudio.cpp  AudioBackend_WASAPI.cpp  AudioBackend_WASAPI.h  CMakeLists.txt  stubs.cpp  xpuPlay.cpp
xpu/src/xpuProcess/: CMakeLists.txt  Equalizer.cpp  Equalizer.h  FadeEffects.cpp  FadeEffects.h  VolumeControl.cpp  VolumeControl.h  stubs.cpp  xpuProcess.cpp
xpu/src/xpuQueue/: CMakeLists.txt  QueueManager.cpp  QueueManager.h  stubs.cpp  xpuQueue.cpp
xpu/tests/: CMakeLists.txt  fix_includes.py
xpu/tests/benchmark/: CMakeLists.txt
xpu/tests/contract/: CMakeLists.txt
xpu/tests/crossplatform/: CMakeLists.txt
xpu/tests/error/: CMakeLists.txt
xpu/tests/integration/: CMakeLists.txt
xpu/tests/performance/: CMakeLists.txt
xpu/tests/unit/: CMakeLists.txt  test_AudioWrappers.cpp  test_DSPEffects.cpp.disabled  test_Protocol.cpp  test_QueueManager.cpp.disabled
xpu/use_manual/: xpuLoad说明书.md
